03_Setup an Ingress Controller/ingress-nginx/nginx-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: nginx-test
  labels:
    name: ingress-test
spec:
  ingressClassName: nginx
  rules:
  - host: test.mydomain.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-test-service
            port: 
              number: 80
